[package]
name = "cv"
version = "0.2.2"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]
repository = "https://github.com/nebgnahz/cv-rs.git"
homepage = "https://github.com/nebgnahz/cv-rs.git"
license = "MIT"
readme = "README.md"
documentation = "rust-vision.s3-website-us-west-2.amazonaws.com"
description = "This library primarily provides a binding and API for OpenCV 3.x."

[dependencies]
native = { package = "cv-sys", version = "0.1.0", path = "cv-sys" }
bytes = "0.4"
failure = "0.1"

[dev-dependencies]
getopts = "0.2"
float-cmp = "0.4"
itertools = "0.8.0"

[features]
cuda = []
text = []
tesseract = []
system = ["native/system"]
gen-bindings = ["native/gen-bindings"]

